--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "homebridge -U ./config -P ./homebridge-esp8266-plugin"
+    "start": "homebridge -U $PWD/config -P $PWD/homebridge-esp8266-plugin"
   },
   "dependencies": {
     "homebridge": "^0.4.46"
