--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "start": "homebridge -U $PWD/config -P $PWD/homebridge-esp8266-plugin"
+    "start": "homebridge -U $PWD/config -P $PWD/homebridge-esp8266-plugin",
+    "reset": "rimraf config/accessories; rimraf config/persit"
   },
   "dependencies": {
     "homebridge": "^0.4.46"
+  },
+  "devDependencies": {
+    "rimraf": "^2.6.3"
   }
 }
