--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "reset": "rimraf config/accessories; rimraf config/persit"
   },
   "dependencies": {
-    "homebridge": "^0.4.46"
+    "bonjour": "^3.5.0",
+    "homebridge": "^0.4.46",
+    "mdns-resolver": "0.0.3"
   },
   "devDependencies": {
     "rimraf": "^2.6.3"
