Implement mqtt for homebridge plugin

--- a/config/config.json
+++ b/config/config.json
@@ -5,10 +5,10 @@
     "port": 51826,
     "pin": "123-45-678"
   },
-  "platforms": [
+  "accessories": [
     {
-      "platform": "esp8266-switch",
-      "name": "D1 Mini"
+      "accessory": "esp8266-switch",
+      "name": "Switch"
     }
   ]
 }
